Merged V4.1-BUG-FIX to HEAD    44918: Fix for ALF-14850 Opencmis getTotalNumItems doesn't return the correct result when setting MaxItemsPerPage    - correctly report the max number of items    44927: ALF-16254 ("Leave Site" behaviour for group based site membership)    44931: Merged V3.4-BUG-FIX to V4.1-BUG-FIX (RECORD ONLY)       44930: Merged V3.4 (3.4.12) to V3.4-BUG-FIX          44929: Merged V4.1-BUG-FIX to V3.4 (3.4.12)             42118: ALF-15878 ALF-15741: generate doc and src zip for web-framework-commons and jlan    44939: Remove svn:mergeinfo    44985: Merged DEV to V4.1-BUG-FIX       44981: ALF-17085 : DB2: unexpected index found in database          Correcting db structure after upgrade from 3.4. Optional statement was added.    44988: Merged DEV to V4.1-BUG-FIX       44937: ALF-16756: WebDAV: An error occurs on drag&drop content from local machine to alfresco when inbound move rule configured.          Add check for content data length during determining existence of content on node.    44989: Merged PATCHES/V4.1.3 to V4.1-BUG-FIX       44984: Merged DEV to PATCHES/V4.1.3          44983: ALF-12425: Can't launch activiti workflow console from Share when external / ntlm / kerberos authentication is used.          In activiti-admin.get.js generated an absolute URL . Use  url.server + url.context  instead of /alfresco.       44986: (RECORD ONLY) Merged DEV to PATCHES/V4.1.3          44937: ALF-16756: WebDAV: An error occurs on drag&drop content from local machine to alfresco when inbound move rule configured.          Add check for content data length during determining existence of content on node.       44987: ALF-17331 60k Site Performance: Admin Console | Groups | Browse Groups (include sys groups): Pagination doesn't work correctly    45008: ALF-17300 - ConcurrentModificationException    45011: BDE-103 - Timezone test fail when not run from the UK (at least from Maven build)    45054: Merged from DEV to V4.1-BUG-FIX      ALF-13312 - If the license d